# apriltag-recamera

./: CMakeLists.txt  test_detection.c  toolchain_riscv.cmake
.history/: test_detection_20241107152304.c  test_detection_20241107152455.c  test_detection_20241107181559.c  test_detection_20241107183302.c  test_detection_20241107183345.c  test_detection_20241107183351.c  test_detection_20241107183459.c  test_detection_20241107184150.c  test_detection_20241107184322.c  test_detection_20241107184802.c  test_detection_20241108093837.c  test_detection_20241108103853.c  test_detection_20241108103902.c  test_detection_20241108105245.c
include/: apriltag_pose.h
lib/: libapriltag.so.3.4.2
